# ws_event_page

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
api_docs/WSE/: Get Event Data.bru  Get Student by WS Code.bru  bruno.json
api_docs/WSE/Greatest Show/: Create Greatest Show Registration.bru  Upload Greatest Show Attachment.bru
api_docs/WSE/Happy Box/: Create HB Submission.bru  Get all challenges.bru  Get all submission by wellspring code.bru  Get all submission in gallery.bru  Upload HB Submission Photo.bru
api_docs/WSE/Happy Run/: Check WS Code HR.bru  Create HR Submission.bru  Find school class and department.bru  GET HR Order Detail.bru  Get HR Settings.bru  Get Total Ticket Count.bru  Get staffs from department.bru  Get students from school class.bru  HR Check Wellspring Code.bru  Submit Happy Run Order.bru
api_docs/WSE/Nutrition Journey/: Create NJ Submission.bru  Get all NJ submission by wellspring code.bru  Get all questions.bru  Upload NJ Submission Photo.bru
frontend/: .env  .env.production  alltypes.d.ts  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  globals.css  main.tsx
install/: after_migrate.py
ws_event_page/: hooks.py  modules.txt  patches.txt
ws_event_page/fixtures/: wse_event.json  wse_hb_challenge.json  wse_settings.json
ws_event_page/install/: after_migrate.py
ws_event_page/www/: events.html  placement_test_checkin.html  wse_ac_checkin.html
(+682 files in other folders)
