[project]
name = "ws_event_page"
authors = [
    { name = "digital.learning@wellspringsaigon.edu.vn", email = "digital.learning@wellspringsaigon.edu.vn"}
]
description = "App to manage landing pages of events at Wellspring"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
